# color-filter-sds

./: README.md  pyproject.toml
dataset/: all_filters.json  filters.json  filters.xlsx  json_schema.json
examples/: color_swatch.py
generators/: compile_dataset.py  parse_apollo_pdf.py  pyproject.toml  scrape_lee_filters.py  scrape_rosco_filters.py
generators/raw/: apollo.json  lee.json  rosco.json
lighting_filters/: __init__.py  lighting_filters.py  typedef.py  types.py
